--- a/.aigne/web-smith/pages/workspace/en/_navigations.yaml
+++ b/.aigne/web-smith/pages/workspace/en/_navigations.yaml
@@ -1,4 +1,4 @@
 - path: /home
   navigation:
     title: Home
-    description: Discover how to generate code documentation automatically.
+    description: Discover AI-powered documentation generation
